--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
     "@mui/x-data-grid": "^7.27.0",
+    "bootstrap": "^5.3.3",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-dropdown": "^1.11.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0"
   },
