--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.5",
+    "@mui/lab": "^6.0.0-beta.29",
     "@mui/material": "^6.4.6",
     "@mui/x-data-grid": "^7.27.0",
     "@mui/x-date-pickers": "^7.27.1",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
